syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

import "google/protobuf/timestamp.proto";
import "v1/recipe-category.proto";
import "v1/recipe-tag.proto";

message RecipeInfo {
  string recipeId = 1;
  string name = 2;

  string ownerId = 3;
  optional string ownerName = 4;
  optional string ownerAvatar = 5;

  bool isOwned = 6;
  bool isSaved = 7;
  string visibility = 8;
  bool isEncrypted = 9;
  string language = 10;
  repeated string translations = 11;
  optional string preview = 12;

  google.protobuf.Timestamp creationTimestamp = 13;
  google.protobuf.Timestamp updateTimestamp = 14;
  int32 version = 15;

  float rating = 16;
  optional int32 score = 17;
  int32 votes = 18;

  repeated string tags = 19;
  repeated string categories = 20;
  bool isFavourite = 21;

  optional int32 servings = 22;
  optional int32 time = 23;

  optional int32 calories = 24;
}

message GetRecipesRequest {
  string userId = 1;

  optional int32 pageSize = 2;

  optional string authorId = 3;

  bool owned = 4;
  bool saved = 5;

  optional string search = 6;

  optional string sorting = 7;
  optional string lastRecipeId = 8;
  google.protobuf.Timestamp lastCreationTimestamp = 9;
  google.protobuf.Timestamp lastUpdateTimestamp = 10;
  optional float lastRating = 11;
  optional int32 lastVotes = 12;
  optional int32 lastTime = 13;
  optional int32 lastCalories = 14;

  optional int32 minRating = 15;
  optional int32 maxRating = 16;

  optional int32 minTime = 17;
  optional int32 maxTime = 18;
  optional int32 minServings = 19;
  optional int32 maxServings = 20;
  optional int32 minCalories = 21;
  optional int32 maxCalories = 22;

  repeated string recipeLanguages = 23;

  optional string userLanguage = 24;
}

message GetRecipesResponse {
  repeated RecipeInfo recipes = 1;
  map<string, RecipeTag> tags = 2;
  map<string, RecipeCategoryInfo> categories = 3;
}
